Redesign customers view component

--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -1,8 +1,10 @@
-<md-card class="customer-view__content__card events column__large">
+<md-card class="customer-view__card events">
   <md-card-title>
-    CUSTOMER EVENTS
-    <md-icon class="customer-view__content__card__action">more_vert</md-icon>
+    <div class="title">Customer Events</div>
+    <div class="subtitle">Sessions, transactions and leads</div>
+    <md-icon>more_vert</md-icon>
   </md-card-title>
+
   <md-card-content>
     <div class="events__container"
          infiniteScroll
