--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -63,11 +63,12 @@
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
       <div [class.customer-view__content--invisible]="creditCardInputMode" class="customer-view__content">
-        <div class="column">
-          <md-card class="customer-view__content__card column__small">
+        <div class="flex-custom">
+          <md-card class="customer-view__card column--small">
             <md-card-title>
-              <span>SHIPPING ADDRESS</span>
-              <md-icon [md-menu-trigger-for]="addressOptions" class="customer-view__content__card__action">more_vert</md-icon>
+              <div class="title">Shipping Information</div>
+              <div class="subtitle">Address where fulfillment will ship packages</div>
+              <md-icon [md-menu-trigger-for]="addressOptions">more_vert</md-icon>
               <md-menu #addressOptions="mdMenu" x-position="before">
                 <button md-menu-item (click)="addressEditMode = true;"> Edit Shipping Address </button>
               </md-menu>
@@ -77,38 +78,34 @@
               <md-input-container>
                 <input disabled md-input placeholder="Full Name" [(ngModel)]="entity.firstName">
               </md-input-container>
-
               <md-input-container>
                 <input [disabled]="!addressEditMode" md-input placeholder="Address" [(ngModel)]="entity.address.line1">
               </md-input-container>
-
               <md-input-container>
                 <input [disabled]="!addressEditMode" md-input placeholder="City" [(ngModel)]="entity.address.city">
               </md-input-container>
 
-              <md-input-container>
-                <input [disabled]="!addressEditMode" md-input placeholder="State" [(ngModel)]="entity.address.state">
-              </md-input-container>
+              <div class="flex-custom customer-view__card__address-row">
+                <dropdown-component [selected]="entity.address.state" (onSelect)="entity.address.state = $event" [disabled]="!addressEditMode" [options]="states" [placeholder]="'State'"></dropdown-component>
+                <md-input-container>
+                  <input [disabled]="!addressEditMode" md-input placeholder="Postal Code" [(ngModel)]="entity.address.zip">
+                </md-input-container>
+              </div>
 
-              <md-input-container>
-                <input [disabled]="!addressEditMode" md-input placeholder="Postal Code" [(ngModel)]="entity.address.zip">
-              </md-input-container>
+              <dropdown-component [selected]="entity.address.country" (onSelect)="entity.address.country = $event" [disabled]="!addressEditMode" [options]="['USA']" [placeholder]="'Country'"></dropdown-component>
 
-              <md-input-container>
-                <input [disabled]="!addressEditMode" md-input placeholder="Country" [(ngModel)]="entity.country">
-              </md-input-container>
-
-              <div *ngIf="addressEditMode" class="customer-view__content__card__actions">
+              <div *ngIf="addressEditMode" class="customer-view__card__actions">
                 <div (click)="cancelAddressUpdate()">CANCEL</div>
                 <div (click)="updateEntity(entity)">UPDATE</div>
               </div>
             </md-card-content>
           </md-card>
 
-          <md-card *ngIf="entity.creditCards && entity.creditCards.length !== 1" class="customer-view__content__card credit-cards column__medium">
+          <md-card *ngIf="entity.creditCards && entity.creditCards.length !== 1" class="customer-view__card credit-cards column--medium">
             <md-card-title class="credit-cards__title">
-              <span>CREDIT CARDS</span>
-              <md-icon [md-menu-trigger-for]="creditCardOptions" class="customer-view__content__card__action">more_vert</md-icon>
+              <div class="title">Billing Information</div>
+              <div class="subtitle">Billing address & credit card information</div>
+              <md-icon [md-menu-trigger-for]="creditCardOptions">more_vert</md-icon>
               <md-menu #creditCardOptions="mdMenu" x-position="before">
                 <button md-menu-item (click)="addNewCreditCard()"> Add Credit Card </button>
               </md-menu>
@@ -134,43 +131,55 @@
             </md-card-content>
           </md-card>
 
-          <md-card *ngIf="entity.creditCards && entity.creditCards.length === 1" class="customer-view__content__card column__medium">
+          <md-card *ngIf="entity.creditCards && entity.creditCards.length === 1" class="customer-view__card column--medium">
             <md-card-title>
-              <md-icon>credit_card</md-icon>
-              <span>{{entity.creditCards[0].getType() | uppercase}} {{entity.creditCards[0].ccnumber | creditCardFormat: true}}</span>
-              <md-icon [md-menu-trigger-for]="creditCardOptions" class="customer-view__content__card__action">more_vert</md-icon>
+              <div class="title">Billing Information</div>
+              <div class="subtitle">Billing address & credit card information</div>
+              <md-icon [md-menu-trigger-for]="creditCardOptions">more_vert</md-icon>
               <md-menu #creditCardOptions="mdMenu" x-position="before">
                 <button md-menu-item (click)="addNewCreditCard()"> Add Credit Card </button>
                 <button md-menu-item (click)="editCreditCard(entity.creditCards[0])"> Edit Credit Card </button>
               </md-menu>
             </md-card-title>
-            <md-card-content class="customer-view__content__card__content">
-              <div class="customer-view__content__card__column">
-                <div class="customer-view__content__card__item"><span>Billing Address: </span></div>
-                <div class="customer-view__content__card__item"><span>Address 1: </span>{{entity.creditCards[0].address.line1}}</div>
-                <div class="customer-view__content__card__item"><span>Address 2: </span>{{entity.creditCards[0].address.line2}}</div>
-                <div class="customer-view__content__card__item"><span>Postal Code: </span>{{entity.creditCards[0].address.zip}}</div>
-                <div class="customer-view__content__card__item"><span>City: </span>{{entity.creditCards[0].address.city}}</div>
-                <div class="customer-view__content__card__item"><span>State: </span>{{entity.creditCards[0].address.state}}</div>
-                <div class="customer-view__content__card__item"><span>Country: </span>{{entity.creditCards[0].address.country}}</div>
+            <md-card-content class="flex-custom">
+              <div class="customer-view__card__column customer-view__card__column--first">
+                <md-input-container>
+                  <input disabled md-input placeholder="Address" [(ngModel)]="entity.creditCards[0].address.line1">
+                </md-input-container>
+                <md-input-container>
+                  <input disabled md-input placeholder="City" [(ngModel)]="entity.creditCards[0].address.city">
+                </md-input-container>
+
+                <div class="flex-custom customer-view__card__address-row">
+                  <dropdown-component [disabled]="true" [selected]="entity.creditCards[0].address.state" [placeholder]="'State'" [options]="states"></dropdown-component>
+                  <md-input-container>
+                    <input disabled md-input placeholder="Postal Code" [(ngModel)]="entity.creditCards[0].address.zip">
+                  </md-input-container>
+                </div>
+                <dropdown-component [disabled]="true" [selected]="entity.creditCards[0].address.country" [placeholder]="'Country'" [options]="['USA']"></dropdown-component>
               </div>
-              <div class="customer-view__content__card__column customer-view__content__card__column--last">
-                <div class="customer-view__content__card__item"><span>Name: </span>{{entity.creditCards[0].name}}</div>
-                <div class="customer-view__content__card__item"><span>Card Type: </span>{{entity.creditCards[0].getType() | uppercase}}</div>
-                <div class="customer-view__content__card__item"><span>Card Number: </span>{{entity.creditCards[0].ccnumber | creditCardFormat: true}}</div>
-                <div class="customer-view__content__card__item"><span>Expiration: </span>{{entity.creditCards[0].expiration | creditCardExpiration | creditCardExpiration}}</div>
+              <div class="customer-view__card__column">
+                <md-input-container>
+                  <input disabled md-input placeholder="Name" [(ngModel)]="entity.creditCards[0].name">
+                </md-input-container>
+                <md-input-container>
+                  <input disabled md-input placeholder="Type" [(ngModel)]="entity.creditCards[0].type">
+                </md-input-container>
+                <md-input-container>
+                  <input disabled md-input placeholder="Type" [(ngModel)]="entity.creditCards[0].maskedNumber">
+                </md-input-container>
+                <md-input-container>
+                  <input disabled md-input placeholder="Expiration" [(ngModel)]="entity.creditCards[0].expirationFormatted">
+                </md-input-container>
               </div>
             </md-card-content>
           </md-card>
 
-          <div class="column__large">
-            <customer-rebills [homepageMode]="true" [id]="entityId"></customer-rebills>
-          </div>
-
+          <customer-notes class="column--large" [customerId]="entityId"></customer-notes>
         </div>
 
-        <div class="column">
-          <customer-notes [customerId]="entityId"></customer-notes>
+        <div class="flex-custom">
+          <customer-rebills style="width: 50%" [homepageMode]="true" [id]="entityId"></customer-rebills>
 
           <customer-events *ngIf="authService.hasPermissions('analytics', 'getAcvtivityByIdentifier')" [customer]="entity"></customer-events>
         </div>
