--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -115,6 +115,8 @@ dropdown-component {
       z-index: 5;
       background: white;
       box-shadow: 0 0 3px rgba(0,0,0,0.3);
+      max-height: 130px;
+      overflow: auto;
 
       &--with-placeholder {
         top: 40px;
