--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -507,8 +507,8 @@ $blue-color: #4A90E2;
       margin-top: 15px;
     }
 
-    &--credit-cards {
-      padding: 15px 20px;
+    &--small-padding {
+      padding: 7px 0;
     }
   }
 
