--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -7,49 +7,46 @@
     <div class="entity-view__info__image">
       <img src="/assets/images/result-item-customer-white.svg" alt="">
     </div>
-    <div class="entity-view__info__data">
+    <form #userDataForm="ngForm" class="entity-view__info__data">
       <div class="entity-view__info__data__date">{{displayCreatedAt() ? 'Created:' : 'Updated:'}} {{(displayCreatedAt() ? entity.createdAt : entity.updatedAt) | formatDateTime: 'date-time'}}</div>
+
       <div class="entity-view__info__data__name">
-
-        <md-input-container *ngIf="customerInfoEditMode; else firstname">
-          <input class="name" md-input type="text" [(ngModel)]="entity.firstName">
+        <md-input-container [class.error]="formInvalid && !userDataForm.form.controls.firstName.valid" class="name" *ngIf="!viewMode; else firstname">
+          <input required md-input type="text" name="firstName" [(ngModel)]="entity.firstName">
         </md-input-container>
-        <ng-template #firstname>
-          {{entity.firstName}}
-        </ng-template>
+        <ng-template #firstname>{{entity.firstName}}</ng-template>
 
-        <md-input-container class="name" *ngIf="customerInfoEditMode; else lastname">
-          <input md-input type="text" [(ngModel)]="entity.lastName">
+        <md-input-container [class.error]="formInvalid && !userDataForm.form.controls.lastName.valid" class="name" *ngIf="!viewMode; else lastname">
+          <input required md-input type="text" name="lastName" [(ngModel)]="entity.lastName">
         </md-input-container>
-        <ng-template #lastname>
-          {{entity.lastName}}
-        </ng-template>
+        <ng-template #lastname>{{entity.lastName}}</ng-template>
       </div>
       <div class="entity-view__info__data__other">
-        <div class="entity-view__info__data__other__item"><md-icon>phone</md-icon>
-          <md-input-container *ngIf="customerInfoEditMode; else phoneNoEdit">
-            <input class="phone-number" md-input type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="entity.phone">
+        <div class="entity-view__info__data__other__item">
+          <md-icon>phone</md-icon>
+          <md-input-container [class.error]="formInvalid && !userDataForm.form.controls.phoneNumber.valid" *ngIf="!viewMode; else phoneNoEdit">
+            <input required md-input class="phone-number" name="phoneNumber" type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="entity.phone">
           </md-input-container>
-          <ng-template #phoneNoEdit>
-            <span class="phone-number">{{getPhoneNumber()}}</span>
-          </ng-template>
+          <ng-template #phoneNoEdit><span class="phone-number">{{getPhoneNumber()}}</span></ng-template>
         </div>
 
-        <div class="entity-view__info__data__other__item"><md-icon>email</md-icon>
-          <md-input *ngIf="customerInfoEditMode; else emailNoEdit" [(ngModel)]="entity.email"></md-input>
-          <ng-template #emailNoEdit>
-            <span>{{entity.email}}</span>
-          </ng-template>
+        <div class="entity-view__info__data__other__item">
+          <md-icon>email</md-icon>
+          <md-input-container [class.error]="formInvalid && !userDataForm.form.controls.email.valid" *ngIf="!viewMode; else emailNoEdit">
+            <input required md-input name="email" type="text" [(ngModel)]="entity.email">
+          </md-input-container>
+          <ng-template #emailNoEdit><span>{{entity.email}}</span></ng-template>
         </div>
       </div>
-    </div>
-    <div class="entity-view__info__edit">
-      <div *ngIf="!customerInfoEditMode; else editActions" class="entity-view__info__edit__update" (click)="customerInfoEditMode = true"> EDIT CUSTOMER </div>
+    </form>
 
-      <ng-template #editActions>
+    <div class="entity-view__info__edit">
+      <div *ngIf="viewMode" class="entity-view__info__edit__update" (click)="setMode(modes.Update)"> EDIT CUSTOMER</div>
+      <div *ngIf="addMode" class="entity-view__info__edit__update" (click)="saveCustomer(userDataForm.form.valid && addressDataForm.form.valid)"> SAVE CUSTOMER </div>
+      <ng-container *ngIf="updateMode">
         <div (click)="cancelInfoUpdate()">CANCEL</div>
         <div class="entity-view__info__edit__update" (click)="updateEntity(entity)">UPDATE</div>
-      </ng-template>
+      </ng-container>
     </div>
   </div>
 
@@ -68,35 +65,34 @@
             <md-card-title>
               <div class="title">Shipping Information</div>
               <div class="subtitle">Address where fulfillment will ship packages</div>
-              <md-icon [md-menu-trigger-for]="addressOptions">more_vert</md-icon>
-              <md-menu #addressOptions="mdMenu" x-position="before">
-                <button md-menu-item (click)="addressEditMode = true;"> Edit Shipping Address </button>
-              </md-menu>
+              <md-icon>more_vert</md-icon>
             </md-card-title>
             <md-card-content>
 
-              <md-input-container>
-                <input disabled md-input placeholder="Full Name" [(ngModel)]="entity.firstName">
-              </md-input-container>
-              <md-input-container>
-                <input [disabled]="!addressEditMode" md-input placeholder="Address" [(ngModel)]="entity.address.line1">
-              </md-input-container>
-              <md-input-container>
-                <input [disabled]="!addressEditMode" md-input placeholder="City" [(ngModel)]="entity.address.city">
-              </md-input-container>
-
-              <div class="flex-custom customer-view__card__address-row">
-                <dropdown-component [selected]="entity.address.state" (onSelect)="entity.address.state = $event" [disabled]="!addressEditMode" [options]="states" [placeholder]="'State'"></dropdown-component>
+              <form #addressDataForm="ngForm">
                 <md-input-container>
-                  <input [disabled]="!addressEditMode" md-input placeholder="Postal Code" [(ngModel)]="entity.address.zip">
+                  <input required disabled md-input name="fullName" placeholder="Full Name" [(ngModel)]="entity.firstName">
                 </md-input-container>
-              </div>
+                <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.address.valid">
+                  <input required [disabled]="viewMode" md-input name="address" placeholder="Address" [(ngModel)]="entity.address.line1">
+                </md-input-container>
+                <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.city.valid">
+                  <input required [disabled]="viewMode" md-input name="city" placeholder="City" [(ngModel)]="entity.address.city">
+                </md-input-container>
 
-              <dropdown-component [selected]="entity.address.country" (onSelect)="entity.address.country = $event" [disabled]="!addressEditMode" [options]="['USA']" [placeholder]="'Country'"></dropdown-component>
+                <div class="flex-custom customer-view__card__address-row">
+                  <dropdown-component [class.error]="formInvalid && !entity.address.state" [required]="true" [selected]="entity.address.state" (onSelect)="entity.address.state = $event" [disabled]="!addressEditMode && viewMode" [options]="states" [placeholder]="'State'"></dropdown-component>
+                  <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.postalCode.valid">
+                    <input required [disabled]="viewMode" md-input name="postalCode" placeholder="Postal Code" [(ngModel)]="entity.address.zip">
+                  </md-input-container>
+                </div>
 
-              <div *ngIf="addressEditMode" class="customer-view__card__actions">
+                <dropdown-component [class.error]="formInvalid && !entity.address.country" [required]="true" [selected]="entity.address.country" (onSelect)="entity.address.country = $event" [disabled]="!addressEditMode && viewMode" [options]="['USA']" [placeholder]="'Country'"></dropdown-component>
+              </form>
+
+              <div *ngIf="updateMode" class="customer-view__card__actions">
                 <div (click)="cancelAddressUpdate()">CANCEL</div>
-                <div (click)="updateEntity(entity)">UPDATE</div>
+                <div (click)="saveCustomer(userDataForm.form.valid && addressDataForm.form.valid)">UPDATE</div>
               </div>
             </md-card-content>
           </md-card>
@@ -127,7 +123,7 @@
                 </md-menu>
               </div>
 
-              <div class="entity-view__no-results entity-view__no-results--credit-cards" *ngIf="!entity.creditCards || entity.creditCards.length === 0">No credit cards found</div>
+              <div class="entity-view__no-results entity-view__no-results--small-padding" *ngIf="!entity.creditCards || entity.creditCards.length === 0">No credit cards found</div>
             </md-card-content>
           </md-card>
 
