--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -81,13 +81,14 @@
                 </md-input-container>
 
                 <div class="flex-custom customer-view__card__address-row">
-                  <dropdown-component [class.error]="formInvalid && !entity.address.state" [required]="true" [selected]="entity.address.state" (onSelect)="entity.address.state = $event" [disabled]="!addressEditMode && viewMode" [options]="states" [placeholder]="'State'"></dropdown-component>
+                  <autocomplete-input [class.error]="formInvalid && !entity.address.state" [disabled]="viewMode" [required]="true" [initialValue]="entity.address.state" [placeholder]="'State'" [showCancelButton]="false" [options]="states" (selected)="entity.address.state = $event"></autocomplete-input>
+
                   <md-input-container [class.error]="formInvalid && !addressDataForm.form.controls.postalCode.valid">
                     <input required [disabled]="viewMode" md-input name="postalCode" placeholder="Postal Code" [(ngModel)]="entity.address.zip">
                   </md-input-container>
                 </div>
 
-                <dropdown-component [class.error]="formInvalid && !entity.address.country" [required]="true" [selected]="entity.address.country" (onSelect)="entity.address.country = $event" [disabled]="!addressEditMode && viewMode" [options]="['USA']" [placeholder]="'Country'"></dropdown-component>
+                <autocomplete-input [class.error]="formInvalid && !entity.address.country" [disabled]="viewMode" [required]="true" [initialValue]="entity.address.country" [placeholder]="'Country'" [showCancelButton]="false" [options]="['USA']" (selected)="entity.address.country = $event"></autocomplete-input>
               </form>
 
               <div *ngIf="updateMode" class="customer-view__card__actions">
