--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -86,6 +86,19 @@ $default-padding: 14px 12px 6px;
         width: 50%;
         margin-left: 10px;
       }
+
+      autocomplete-input {
+        width: 50%;
+
+        md-input-container {
+          width: 100%;
+          margin-left: 0;
+        }
+      }
+    }
+
+    .default-autocomplete-input__options {
+      width: 150px;
     }
 
     &__item {
