Add create customer modal

--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -292,6 +292,38 @@ $default-padding: 14px 12px 6px;
     border-top: 1px solid rgba(0,0,0,0.2);
     padding: 12px;
   }
+
+  &__add-new {
+    display: flex;
+    margin: auto;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    max-width: 400px;
+    padding: 25px 15px;
+    flex-direction: column;
+    background: white;
+    font-size: 14px;
+
+    .title {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+
+    .button-container {
+      margin-top: 15px;
+      text-align: right;
+
+      div {
+        color: $card-title-color;
+        cursor: pointer;
+        font-size: 18px;
+      }
+    }
+
+    md-input-container:first-of-type {
+      margin-right: 20px;
+      max-width: 180px;
+    }
+  }
 }
 
 .credit-cards {
