--- a/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
+++ b/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
@@ -34,7 +34,11 @@
   </div>
 
   <div class="customer-view__edit__address">
-    <div class="customer-view__edit__address__title">Billing Address</div>
+    <div class="flex-custom">
+      <div class="customer-view__edit__address__title">Billing Address</div>
+      <md-checkbox (change)="toggleSameShippingAddress($event)">Same as customer address</md-checkbox>
+    </div>
+
     <md-input required placeholder="Address 1" [(ngModel)]="ccard.address.line1"></md-input>
     <md-input placeholder="Address 2" [(ngModel)]="ccard.address.line2"></md-input>
 
