--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -152,6 +152,10 @@
               </md-input-container>
 
               <md-input-container class="entity-view__card__content__item">
+                <input [disabled]="viewMode" md-input placeholder="Phone" [textMask]="{mask: mask, guide: false}" name="phone" [(ngModel)]="entity.customerService.phone" type="text">
+              </md-input-container>
+
+              <md-input-container class="entity-view__card__content__item">
                 <input [disabled]="viewMode" md-input placeholder="Descriptor" name="description" [(ngModel)]="entity.customerService.description" type="text">
               </md-input-container>
 
