Fix card layout of merchant provider

--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -42,7 +42,7 @@
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
       <md-tab>
-        <div class="flex-custom">
+        <div class="flex-custom flex-custom--wrap">
 
           <div class="entity-view__card">
             <div class="entity-view__card__header">
