Enable view product from product schedule

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -116,7 +116,8 @@
                     [associationEnabled]="false"
                     [columnParams]="scheduleColumnParams"
                     [associateDataMapper]="scheduleMapper"
-                    (disassociate)="disassociateSchedule($event)">
+                    (disassociate)="disassociateSchedule($event)"
+                    (view)="navigateToProduct($event)">
       </table-memory>
 
     </md-tab>
