--- a/src/app/pages/products-page/product-view/product-view.component.scss
+++ b/src/app/pages/products-page/product-view/product-view.component.scss
@@ -8,6 +8,10 @@
       padding-bottom: 4px;
     }
 
+    md-checkbox {
+      width: 50%;
+    }
+
     md-input-container {
       margin-right: 25px;
     }
