Auto fill default product price when adding to schedule

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -78,7 +78,7 @@
                                   [placeholder]="'Product Name'"
                                   [showCancelButton]="false"
                                   [required]="true"
-                                  (selected)="scheduleToAdd.product = $event">
+                                  (selected)="addProductToSchedule($event)">
               </autocomplete-input>
               <md-input-container [class.error]="formInvalid && !price">
                 <input required md-input placeholder="Price" [textMask]="{mask: numberMask, guide: false}" (keydown)="isCurrency($event)" name="price" [(ngModel)]="price" type="text">
