--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
@@ -43,10 +43,6 @@
             <input required md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
           </md-input-container>
 
-          <md-input-container [class.error]="formInvalid && !entity.endpoint" class="entity-view__card__content__item">
-            <input required md-input [disabled]="viewMode" placeholder="Endpoint" [(ngModel)]="entity.endpoint" name="endpoint" type="text">
-          </md-input-container>
-
           <md-input-container [class.error]="formInvalid && !entity.username" class="entity-view__card__content__item">
             <input required md-input [disabled]="viewMode" placeholder="Username" [(ngModel)]="entity.username" name="username" type="text">
           </md-input-container>
@@ -54,6 +50,24 @@
           <md-input-container [class.error]="formInvalid && !entity.password" class="entity-view__card__content__item">
             <input required md-input [disabled]="viewMode" placeholder="Password" [(ngModel)]="entity.password" name="password" type="text">
           </md-input-container>
+
+          <md-input-container [class.error]="formInvalid && !entity.threePLKey" class="entity-view__card__content__item">
+            <input required md-input [disabled]="viewMode" placeholder="ThreePL Key" [(ngModel)]="entity.threePLKey" name="threeplKey" type="text">
+          </md-input-container>
+
+          <md-input-container [class.error]="formInvalid && !entity.facilityId" class="entity-view__card__content__item">
+            <input required md-input [disabled]="viewMode" placeholder="Facility ID" [(ngModel)]="entity.facilityId" name="threeplId" type="text">
+          </md-input-container>
+
+          <md-input-container [class.error]="formInvalid && !entity.threePLId" class="entity-view__card__content__item">
+            <input required md-input [disabled]="viewMode" placeholder="ThreePL ID" [(ngModel)]="entity.threePLId" name="threeplId" type="text">
+          </md-input-container>
+
+          <md-input-container [class.error]="formInvalid && !entity.customerId" class="entity-view__card__content__item">
+            <input required md-input [disabled]="viewMode" placeholder="Customer ID" [(ngModel)]="entity.customerId" name="threeplId" type="text">
+          </md-input-container>
+
+          <md-textarea [class.error]="formInvalid && !entity.returnAddress" class="entity-view__card__content__item" required [(ngModel)]="entity.returnAddress" name="returnAddress" placeholder="Return Address"></md-textarea>
         </form>
 
         <div *ngIf="!viewMode" class="entity-view__card__actions">
