--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-view.component.html
@@ -56,7 +56,7 @@
           </md-input-container>
 
           <md-input-container [class.error]="formInvalid && !entity.facilityId" class="entity-view__card__content__item">
-            <input required md-input [disabled]="viewMode" placeholder="Facility ID" [(ngModel)]="entity.facilityId" name="threeplId" type="text">
+            <input required md-input [disabled]="viewMode" placeholder="Facility ID" [(ngModel)]="entity.facilityId" name="facilityId" type="text">
           </md-input-container>
 
           <md-input-container [class.error]="formInvalid && !entity.threePLId" class="entity-view__card__content__item">
@@ -64,10 +64,10 @@
           </md-input-container>
 
           <md-input-container [class.error]="formInvalid && !entity.customerId" class="entity-view__card__content__item">
-            <input required md-input [disabled]="viewMode" placeholder="Customer ID" [(ngModel)]="entity.customerId" name="threeplId" type="text">
+            <input required md-input [disabled]="viewMode" placeholder="Customer ID" [(ngModel)]="entity.customerId" name="customerId" type="text">
           </md-input-container>
 
-          <md-textarea [class.error]="formInvalid && !entity.returnAddress" class="entity-view__card__content__item" required [(ngModel)]="entity.returnAddress" name="returnAddress" placeholder="Return Address"></md-textarea>
+          <md-textarea [disabled]="viewMode" [class.error]="formInvalid && !entity.returnAddress" class="entity-view__card__content__item" required [(ngModel)]="entity.returnAddress" name="returnAddress" placeholder="Return Address"></md-textarea>
         </form>
 
         <div *ngIf="!viewMode" class="entity-view__card__actions">
